changes all  made

--- a/port/.env
+++ b/port/.env
@@ -1,2 +1,4 @@
 # Backend API URL (Vite uses VITE_ prefix)
-VITE_BACKEND_URL=http://localhost:5000
+# For development: http://localhost:5000
+# For production: Replace with your deployed backend URL
+VITE_BACKEND_URL=https://your-backend-name.vercel.app
