--- a/port/.env
+++ b/port/.env
@@ -1,4 +1,4 @@
 # Backend API URL (Vite uses VITE_ prefix)
 # For development: http://localhost:5000
 # For production: Replace with your deployed backend URL
-VITE_BACKEND_URL=https://your-backend-name.vercel.app
+VITE_BACKEND_URL=https://meghashyam-delta.vercel.app/
